added text and a gif

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<head>
-  <title> Week 3 Exercise </title>
+<head lang="EN-CA">
+  <meta charset="UTF-8">
+    <title> GitHub Setup </title>
+    <!-- 'Created by Gabriel Schnobb on 24/09/2025' -->
   </head>
 
-<body>
-  
+<body style="background-color: red;">
+  <img src="giphy.gif" alt="tiny dog in superman costume walking on treadmill with its eyes wide open" height="700">
+    <h1> Gabriel Schnobb </h1>
+    <h2> GitHub Setup Complete! </h2>
   </body>
